--- a/projects/portfolio/index.html
+++ b/projects/portfolio/index.html
@@ -11,829 +11,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&family=Abril+Fatface&display=swap"
     rel="stylesheet">
-  <style>
-    :root {
-      --bg: #0e0e0e;
-      --surface: #161616;
-      --surface2: #1e1e1e;
-      --border: rgba(255, 255, 255, .08);
-      --border2: rgba(255, 255, 255, .14);
-      --text: #f5f5f0;
-      --text-mid: #aaaaaa;
-      --text-muted: #666;
-      --lime: #b8f400;
-      --lime-dark: #8abd00;
-      --lime-bg: rgba(184, 244, 0, .08);
-      --lime-bg2: rgba(184, 244, 0, .14);
-      --r: 12px
-    }
-
-    *,
-    *::before,
-    *::after {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0
-    }
-
-    html {
-      scroll-behavior: smooth
-    }
-
-    body {
-      background: var(--bg);
-      color: var(--text);
-      font-family: 'Space Grotesk', sans-serif;
-      line-height: 1.6;
-      overflow-x: hidden
-    }
-
-    /* Custom cursor */
-    * {
-      cursor: none !important
-    }
-
-    .cursor {
-      position: fixed;
-      width: 12px;
-      height: 12px;
-      background: var(--lime);
-      border-radius: 50%;
-      pointer-events: none;
-      z-index: 9999;
-      transform: translate(-50%, -50%);
-      transition: transform .1s, width .2s, height .2s;
-      mix-blend-mode: difference
-    }
-
-    .cursor-ring {
-      position: fixed;
-      width: 40px;
-      height: 40px;
-      border: 1.5px solid var(--lime);
-      border-radius: 50%;
-      pointer-events: none;
-      z-index: 9998;
-      transform: translate(-50%, -50%);
-      transition: transform .08s, width .25s, height .25s;
-      opacity: .5
-    }
-
-    /* NAV */
-    nav {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 100;
-      padding: 1.25rem 3rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      background: rgba(14, 14, 14, .85);
-      backdrop-filter: blur(16px);
-      border-bottom: 1px solid var(--border)
-    }
-
-    .nav-logo {
-      font-family: 'Abril Fatface', serif;
-      font-size: 1.4rem;
-      color: var(--lime);
-      letter-spacing: -.01em
-    }
-
-    .nav-links {
-      display: flex;
-      gap: 2rem;
-      align-items: center
-    }
-
-    .nav-links a {
-      color: var(--text-muted);
-      text-decoration: none;
-      font-size: .85rem;
-      font-weight: 500;
-      transition: color .2s;
-      letter-spacing: .02em
-    }
-
-    .nav-links a:hover {
-      color: var(--text)
-    }
-
-    .nav-cta {
-      background: var(--lime);
-      color: #0e0e0e;
-      padding: .5rem 1.2rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: .82rem;
-      font-weight: 700 !important;
-      color: #000 !important;
-      transition: all .2s
-    }
-
-    .nav-cta:hover {
-      background: #ceff22;
-      transform: translateY(-1px)
-    }
-
-    /* HERO */
-    .hero {
-      min-height: 100vh;
-      padding: 8rem 3rem 5rem;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      position: relative;
-      overflow: hidden
-    }
-
-    .hero-bg-text {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-family: 'Abril Fatface', serif;
-      font-size: 22vw;
-      color: rgba(255, 255, 255, .02);
-      white-space: nowrap;
-      pointer-events: none;
-      letter-spacing: -.05em;
-      user-select: none
-    }
-
-    .hero-eyebrow {
-      display: inline-flex;
-      align-items: center;
-      gap: .6rem;
-      background: var(--lime-bg2);
-      border: 1px solid rgba(184, 244, 0, .2);
-      color: var(--lime);
-      font-size: .72rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: .12em;
-      padding: .4rem 1rem;
-      border-radius: 4px;
-      margin-bottom: 1.5rem;
-      width: fit-content
-    }
-
-    .hero-eyebrow-dot {
-      width: 6px;
-      height: 6px;
-      background: var(--lime);
-      border-radius: 50%;
-      animation: blink 1.5s infinite
-    }
-
-    @keyframes blink {
-
-      0%,
-      100% {
-        opacity: 1
-      }
-
-      50% {
-        opacity: 0
-      }
-    }
-
-    .hero-name {
-      font-family: 'Abril Fatface', serif;
-      font-size: clamp(3.5rem, 8vw, 8rem);
-      line-height: .95;
-      letter-spacing: -.03em;
-      margin-bottom: .5rem
-    }
-
-    .hero-name span {
-      color: var(--lime);
-      display: block
-    }
-
-    .hero-title {
-      font-size: clamp(1rem, 2vw, 1.5rem);
-      color: var(--text-mid);
-      font-weight: 300;
-      margin-bottom: 1.75rem;
-      letter-spacing: .02em
-    }
-
-    .hero-desc {
-      max-width: 520px;
-      color: var(--text-muted);
-      line-height: 1.7;
-      margin-bottom: 2.5rem;
-      font-size: .95rem
-    }
-
-    .hero-actions {
-      display: flex;
-      gap: 1rem;
-      flex-wrap: wrap;
-      align-items: center
-    }
-
-    .btn-lime {
-      background: var(--lime);
-      color: #000;
-      padding: .85rem 2rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: .9rem;
-      font-weight: 700;
-      transition: all .2s;
-      border: none;
-      letter-spacing: -.01em
-    }
-
-    .btn-lime:hover {
-      background: #ceff22;
-      transform: translateY(-2px);
-      box-shadow: 0 8px 30px rgba(184, 244, 0, .3)
-    }
-
-    .btn-ghost {
-      background: none;
-      border: 1px solid var(--border2);
-      color: var(--text-mid);
-      padding: .85rem 1.75rem;
-      border-radius: 8px;
-      text-decoration: none;
-      font-size: .9rem;
-      font-weight: 600;
-      transition: all .2s
-    }
-
-    .btn-ghost:hover {
-      border-color: var(--lime);
-      color: var(--lime)
-    }
-
-    .hero-scroll {
-      position: absolute;
-      bottom: 2.5rem;
-      left: 50%;
-      transform: translateX(-50%);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      gap: .5rem;
-      color: var(--text-muted);
-      font-size: .7rem;
-      letter-spacing: .1em;
-      text-transform: uppercase;
-      animation: bounce 2s infinite
-    }
-
-    @keyframes bounce {
-
-      0%,
-      100% {
-        transform: translateX(-50%) translateY(0)
-      }
-
-      50% {
-        transform: translateX(-50%) translateY(6px)
-      }
-    }
-
-    .hero-scroll-line {
-      width: 1px;
-      height: 40px;
-      background: linear-gradient(to bottom, var(--border2), transparent)
-    }
-
-    .hero-stats {
-      display: flex;
-      gap: 3rem;
-      margin-top: 3rem;
-      padding-top: 2.5rem;
-      border-top: 1px solid var(--border);
-      flex-wrap: wrap
-    }
-
-    .hstat-item strong {
-      display: block;
-      font-family: 'Abril Fatface', serif;
-      font-size: 2.2rem;
-      color: var(--lime);
-      line-height: 1
-    }
-
-    .hstat-item span {
-      font-size: .72rem;
-      color: var(--text-muted);
-      letter-spacing: .05em;
-      text-transform: uppercase
-    }
-
-    /* MARQUEE */
-    .marquee-wrap {
-      overflow: hidden;
-      background: var(--lime);
-      padding: .7rem 0;
-      border-top: 1px solid var(--lime);
-      border-bottom: 1px solid var(--lime)
-    }
-
-    .marquee {
-      display: flex;
-      gap: 0;
-      animation: marquee 20s linear infinite
-    }
-
-    .marquee-item {
-      white-space: nowrap;
-      font-size: .8rem;
-      font-weight: 800;
-      color: #000;
-      text-transform: uppercase;
-      letter-spacing: .12em;
-      padding: 0 2rem
-    }
-
-    .marquee-sep {
-      color: #0e0e0e;
-      opacity: .4
-    }
-
-    @keyframes marquee {
-      from {
-        transform: translateX(0)
-      }
-
-      to {
-        transform: translateX(-50%)
-      }
-    }
-
-    /* SECTIONS */
-    section {
-      padding: 6rem 3rem;
-      max-width: 1200px;
-      margin: 0 auto
-    }
-
-    .section-tag {
-      font-size: .7rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: .15em;
-      color: var(--lime);
-      background: var(--lime-bg2);
-      border: 1px solid rgba(184, 244, 0, .2);
-      padding: .35rem .85rem;
-      border-radius: 4px;
-      display: inline-block;
-      margin-bottom: 1.25rem
-    }
-
-    .section-title {
-      font-family: 'Abril Fatface', serif;
-      font-size: clamp(2rem, 4vw, 3.5rem);
-      line-height: 1.05;
-      letter-spacing: -.02em;
-      margin-bottom: 1rem
-    }
-
-    .section-sub {
-      color: var(--text-muted);
-      font-size: .95rem;
-      max-width: 500px;
-      line-height: 1.7;
-      margin-bottom: 3rem
-    }
-
-    /* PROJECTS */
-    .projects-grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 1.25rem
-    }
-
-    .project-card {
-      background: var(--surface);
-      border: 1px solid var(--border);
-      border-radius: var(--r);
-      overflow: hidden;
-      transition: all .3s;
-      position: relative
-    }
-
-    .project-card:hover {
-      border-color: var(--lime);
-      transform: translateY(-4px)
-    }
-
-    .project-card:hover .pc-overlay {
-      opacity: 1
-    }
-
-    .pc-visual {
-      height: 220px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 5rem;
-      position: relative;
-      overflow: hidden
-    }
-
-    .pc-overlay {
-      position: absolute;
-      inset: 0;
-      background: rgba(14, 14, 14, .8);
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      opacity: 0;
-      transition: opacity .3s;
-      gap: 1rem
-    }
-
-    .pc-link {
-      background: var(--lime);
-      color: #000;
-      padding: .55rem 1.2rem;
-      border-radius: 7px;
-      font-size: .8rem;
-      font-weight: 800;
-      text-decoration: none;
-      letter-spacing: .02em;
-      border: none
-    }
-
-    .pc-link.ghost {
-      background: rgba(255, 255, 255, .1);
-      color: var(--text);
-      border: 1px solid var(--border2)
-    }
-
-    .pc-link.ghost:hover {
-      border-color: var(--lime);
-      color: var(--lime)
-    }
-
-    .pc-body {
-      padding: 1.4rem 1.5rem
-    }
-
-    .pc-tags {
-      display: flex;
-      gap: .4rem;
-      flex-wrap: wrap;
-      margin-bottom: .65rem
-    }
-
-    .pc-tag {
-      font-size: .62rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: .06em;
-      padding: .2rem .55rem;
-      border-radius: 4px;
-      background: var(--lime-bg2);
-      color: var(--lime)
-    }
-
-    .pc-tag.neutral {
-      background: var(--surface2);
-      color: var(--text-muted)
-    }
-
-    .pc-title {
-      font-size: 1.05rem;
-      font-weight: 700;
-      margin-bottom: .35rem;
-      letter-spacing: -.01em
-    }
-
-    .pc-desc {
-      font-size: .8rem;
-      color: var(--text-muted);
-      line-height: 1.6
-    }
-
-    .project-card.featured {
-      grid-column: 1/-1;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      align-items: center
-    }
-
-    .project-card.featured .pc-visual {
-      height: 100%;
-      min-height: 280px
-    }
-
-    /* SKILLS */
-    .skills-layout {
-      display: grid;
-      grid-template-columns: 1fr 1.5fr;
-      gap: 3rem;
-      align-items: start
-    }
-
-    .skill-category {
-      margin-bottom: 1.75rem
-    }
-
-    .skill-cat-title {
-      font-size: .72rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: .1em;
-      color: var(--lime);
-      margin-bottom: .9rem
-    }
-
-    .skill-pills {
-      display: flex;
-      flex-wrap: wrap;
-      gap: .5rem
-    }
-
-    .skill-pill {
-      background: var(--surface);
-      border: 1px solid var(--border);
-      padding: .4rem .9rem;
-      border-radius: 6px;
-      font-size: .8rem;
-      font-weight: 600;
-      color: var(--text-mid);
-      transition: all .2s
-    }
-
-    .skill-pill:hover {
-      border-color: var(--lime);
-      color: var(--lime)
-    }
-
-    .exp-timeline {
-      border-left: 1px solid var(--border2);
-      padding-left: 2rem;
-      position: relative
-    }
-
-    .exp-item {
-      margin-bottom: 2rem;
-      position: relative
-    }
-
-    .exp-item::before {
-      content: '';
-      position: absolute;
-      left: -2.5rem;
-      top: 4px;
-      width: 10px;
-      height: 10px;
-      border-radius: 50%;
-      background: var(--lime);
-      border: 2px solid var(--bg)
-    }
-
-    .exp-period {
-      font-size: .7rem;
-      font-weight: 700;
-      color: var(--lime);
-      text-transform: uppercase;
-      letter-spacing: .08em;
-      margin-bottom: .3rem
-    }
-
-    .exp-role {
-      font-size: 1rem;
-      font-weight: 700;
-      margin-bottom: .15rem
-    }
-
-    .exp-company {
-      font-size: .85rem;
-      color: var(--text-muted);
-      margin-bottom: .45rem
-    }
-
-    .exp-desc {
-      font-size: .82rem;
-      color: var(--text-muted);
-      line-height: 1.65
-    }
-
-    /* CONTACT */
-    .contact-wrap {
-      display: grid;
-      grid-template-columns: 1.2fr 1fr;
-      gap: 3rem;
-      align-items: center;
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 6rem 3rem;
-      border-top: 1px solid var(--border)
-    }
-
-    .contact-big {
-      font-family: 'Abril Fatface', serif;
-      font-size: clamp(2.5rem, 5vw, 5rem);
-      line-height: 1;
-      letter-spacing: -.03em;
-      margin-bottom: 1rem
-    }
-
-    .contact-big em {
-      color: var(--lime);
-      font-style: italic
-    }
-
-    .contact-sub {
-      color: var(--text-muted);
-      line-height: 1.7;
-      margin-bottom: 2rem
-    }
-
-    .social-links {
-      display: flex;
-      gap: .75rem;
-      flex-wrap: wrap;
-      margin-top: 1.5rem
-    }
-
-    .social-btn {
-      display: flex;
-      align-items: center;
-      gap: .5rem;
-      background: var(--surface);
-      border: 1px solid var(--border2);
-      padding: .55rem 1rem;
-      border-radius: 8px;
-      color: var(--text-mid);
-      font-size: .8rem;
-      font-weight: 600;
-      text-decoration: none;
-      transition: all .2s
-    }
-
-    .social-btn:hover {
-      border-color: var(--lime);
-      color: var(--lime)
-    }
-
-    .contact-form {
-      background: var(--surface);
-      border: 1px solid var(--border);
-      border-radius: 16px;
-      padding: 2rem
-    }
-
-    .form-group {
-      margin-bottom: 1rem
-    }
-
-    .form-label {
-      display: block;
-      font-size: .7rem;
-      font-weight: 700;
-      text-transform: uppercase;
-      letter-spacing: .08em;
-      color: var(--text-muted);
-      margin-bottom: .4rem
-    }
-
-    .form-inp {
-      width: 100%;
-      background: var(--surface2);
-      border: 1px solid var(--border2);
-      border-radius: 8px;
-      padding: .75rem 1rem;
-      color: var(--text);
-      font-family: 'Space Grotesk', sans-serif;
-      font-size: .875rem;
-      outline: none;
-      transition: border-color .2s
-    }
-
-    .form-inp:focus {
-      border-color: var(--lime)
-    }
-
-    .form-inp::placeholder {
-      color: var(--text-muted)
-    }
-
-    textarea.form-inp {
-      resize: vertical;
-      min-height: 100px
-    }
-
-    .form-submit {
-      width: 100%;
-      background: var(--lime);
-      color: #000;
-      border: none;
-      padding: .85rem;
-      border-radius: 8px;
-      font-family: 'Space Grotesk', sans-serif;
-      font-size: .9rem;
-      font-weight: 700;
-      margin-top: .5rem;
-      transition: all .2s
-    }
-
-    .form-submit:hover {
-      background: #ceff22;
-      transform: translateY(-1px)
-    }
-
-    /* FOOTER */
-    footer {
-      border-top: 1px solid var(--border);
-      padding: 2rem 3rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      max-width: 100%;
-      flex-wrap: wrap;
-      gap: 1rem
-    }
-
-    .footer-brand {
-      font-family: 'Abril Fatface', serif;
-      font-size: 1.1rem;
-      color: var(--lime)
-    }
-
-    footer p {
-      font-size: .78rem;
-      color: var(--text-muted)
-    }
-
-    /* TOAST */
-    .toast {
-      position: fixed;
-      bottom: 2rem;
-      right: 2rem;
-      background: var(--lime);
-      color: #000;
-      padding: .65rem 1.25rem;
-      border-radius: 8px;
-      font-size: .82rem;
-      font-weight: 700;
-      z-index: 999;
-      transform: translateY(80px);
-      opacity: 0;
-      transition: all .3s
-    }
-
-    .toast.show {
-      transform: translateY(0);
-      opacity: 1
-    }
-
-    @media(max-width:900px) {
-      nav {
-        padding: .85rem 1.5rem
-      }
-
-      .nav-links {
-        gap: 1rem
-      }
-
-      .hero {
-        padding: 7rem 1.5rem 4rem
-      }
-
-      .hero-bg-text {
-        display: none
-      }
-
-      .projects-grid {
-        grid-template-columns: 1fr
-      }
-
-      .project-card.featured {
-        grid-template-columns: 1fr
-      }
-
-      .skills-layout {
-        grid-template-columns: 1fr
-      }
-
-      .contact-wrap {
-        grid-template-columns: 1fr;
-        padding: 4rem 1.5rem
-      }
-
-      section {
-        padding: 4rem 1.5rem
-      }
-
-      footer {
-        padding: 1.5rem
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
