--- a/projects/social-dashboard/index.html
+++ b/projects/social-dashboard/index.html
@@ -6,100 +6,8 @@
 <title>Pulse — Social Media Dashboard</title>
 <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@300;400;500;600;700;800&family=Bodoni+Moda:ital,wght@1,700&display=swap" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
-<style>
-:root{
-  --bg:#faf9ff;--surface:#fff;--surface2:#f3f0fb;--border:rgba(100,70,200,.1);--border2:rgba(100,70,200,.18);
-  --text:#1a0f35;--text-mid:#4a3870;--text-muted:#9a88c0;
-  --violet:#5b21b6;--vio-l:#7c3aed;--vio-bg:rgba(91,33,182,.08);--vio-bg2:rgba(91,33,182,.14);
-  --citrus:#d97706;--cit-bg:rgba(217,119,6,.1);
-  --rose:#e11d48;--rose-bg:rgba(225,29,72,.08);
-  --teal:#0891b2;--teal-bg:rgba(8,145,178,.08);
-  --green:#059669;--green-bg:rgba(5,150,105,.08);
-  --r:14px;--shadow:0 2px 16px rgba(91,33,182,.07);--shadow-md:0 6px 28px rgba(91,33,182,.12)
-}
-*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
-body{background:var(--bg);color:var(--text);font-family:'Manrope',sans-serif;min-height:100vh;display:flex}
-/* SIDEBAR */
-.sidebar{width:230px;background:var(--violet);position:fixed;top:0;left:0;height:100vh;padding:1.75rem 1.25rem;display:flex;flex-direction:column;z-index:100}
-.brand{color:#fff;font-size:1.2rem;font-weight:800;margin-bottom:2rem;display:flex;align-items:center;gap:.5rem}
-.brand-icon{width:32px;height:32px;background:rgba(255,255,255,.2);border-radius:8px;display:flex;align-items:center;justify-content:center;font-size:.9rem}
-.snav{display:flex;flex-direction:column;gap:.2rem;flex:1}
-.snl{display:flex;align-items:center;gap:.65rem;padding:.6rem .85rem;border-radius:8px;color:rgba(255,255,255,.6);font-size:.82rem;font-weight:600;cursor:pointer;border:none;background:none;font-family:'Manrope',sans-serif;text-align:left;transition:all .2s;width:100%}
-.snl:hover,.snl.active{color:#fff;background:rgba(255,255,255,.15)}
-.snl svg{flex-shrink:0;opacity:.8}
-.platform-pills{margin-top:1.5rem;padding-top:1.25rem;border-top:1px solid rgba(255,255,255,.15)}
-.platform-label{font-size:.6rem;text-transform:uppercase;letter-spacing:.1em;color:rgba(255,255,255,.4);margin-bottom:.65rem}
-.plat-pill{display:flex;align-items:center;gap:.5rem;padding:.4rem .7rem;border-radius:6px;margin-bottom:.25rem;cursor:pointer;transition:all .2s}
-.plat-pill:hover{background:rgba(255,255,255,.1)}
-.plat-dot{width:8px;height:8px;border-radius:50%;flex-shrink:0}
-.plat-name{font-size:.75rem;color:rgba(255,255,255,.65);font-weight:600}
-/* MAIN */
-.main{margin-left:230px;flex:1;padding:2rem 2.25rem;min-height:100vh}
-.page{display:none;animation:fadeIn .3s ease}
-.page.active{display:block}
-@keyframes fadeIn{from{opacity:0;transform:translateY(6px)}to{opacity:1;transform:translateY(0)}}
-.page-head{display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:1.75rem}
-.page-title{font-size:1.85rem;font-weight:800;letter-spacing:-.02em;margin-bottom:.2rem}
-.page-sub{color:var(--text-muted);font-size:.85rem}
-.date-range{background:var(--surface);border:1px solid var(--border2);border-radius:8px;padding:.5rem .9rem;color:var(--text-mid);font-family:'Manrope',sans-serif;font-size:.8rem;font-weight:600;cursor:pointer;outline:none}
-/* METRIC CARDS */
-.metrics-row{display:grid;grid-template-columns:repeat(4,1fr);gap:1rem;margin-bottom:1.5rem}
-.metric-card{background:var(--surface);border:1px solid var(--border);border-radius:var(--r);padding:1.35rem;box-shadow:var(--shadow);transition:all .25s;position:relative;overflow:hidden}
-.metric-card:hover{transform:translateY(-2px);box-shadow:var(--shadow-md)}
-.metric-card::after{content:'';position:absolute;right:-15px;bottom:-15px;width:80px;height:80px;border-radius:50%;opacity:.1}
-.mc-ig::after{background:var(--rose)}
-.mc-tw::after{background:var(--teal)}
-.mc-li::after{background:#0a66c2}
-.mc-yt::after{background:#ff0000}
-.mc-label{font-size:.68rem;font-weight:700;text-transform:uppercase;letter-spacing:.09em;color:var(--text-muted);margin-bottom:.7rem;display:flex;align-items:center;gap:.4rem}
-.mc-platform-dot{width:6px;height:6px;border-radius:50%;flex-shrink:0}
-.mc-number{font-size:2rem;font-weight:800;letter-spacing:-.02em;margin-bottom:.35rem;line-height:1}
-.mc-change{font-size:.72rem;font-weight:700}
-.mc-change.up{color:var(--green)}
-.mc-change.down{color:var(--rose)}
-/* CHARTS */
-.charts-row{display:grid;grid-template-columns:1.5fr 1fr;gap:1.25rem;margin-bottom:1.5rem}
-.card{background:var(--surface);border:1px solid var(--border);border-radius:var(--r);padding:1.4rem;box-shadow:var(--shadow)}
-.card-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:1.1rem}
-.card-head h3{font-size:.9rem;font-weight:800;letter-spacing:-.01em}
-.chart-tabs{display:flex;gap:.2rem;background:var(--surface2);border-radius:7px;padding:.2rem}
-.ctab{padding:.3rem .7rem;border-radius:5px;border:none;background:none;font-family:'Manrope',sans-serif;font-size:.7rem;font-weight:700;cursor:pointer;color:var(--text-muted);transition:all .2s}
-.ctab.active{background:var(--surface);color:var(--violet);box-shadow:0 1px 4px rgba(91,33,182,.1)}
-/* TOP POSTS */
-.posts-list{display:flex;flex-direction:column;gap:.75rem}
-.post-item{display:flex;gap:.9rem;align-items:flex-start;padding:.9rem 0;border-bottom:1px solid var(--border)}
-.post-item:last-child{border-bottom:none}
-.post-rank{width:24px;height:24px;border-radius:6px;display:flex;align-items:center;justify-content:center;font-size:.7rem;font-weight:800;color:#fff;flex-shrink:0;margin-top:1px}
-.post-info{flex:1;min-width:0}
-.post-text{font-size:.8rem;font-weight:600;line-height:1.45;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;margin-bottom:.3rem}
-.post-meta-row{display:flex;gap:.75rem;font-size:.7rem;color:var(--text-muted)}
-.post-stat{display:flex;align-items:center;gap:.2rem}
-.post-stat svg{width:11px;height:11px;flex-shrink:0}
-.post-eng{text-align:right}
-.post-eng-num{font-size:.95rem;font-weight:800;color:var(--violet)}
-.post-eng-label{font-size:.62rem;color:var(--text-muted)}
-/* SCHEDULE */
-.schedule-grid{display:grid;grid-template-columns:repeat(7,1fr);gap:.5rem;margin-bottom:1rem}
-.sched-day-head{text-align:center;font-size:.65rem;font-weight:800;text-transform:uppercase;letter-spacing:.06em;color:var(--text-muted);padding:.3rem 0}
-.sched-slot{min-height:60px;border-radius:8px;border:1.5px dashed var(--border);padding:.4rem;cursor:pointer;transition:all .2s;position:relative}
-.sched-slot:hover{border-color:var(--violet);background:var(--vio-bg)}
-.sched-slot.has-post{border-style:solid;border-color:var(--border)}
-.sched-post{background:var(--vio-bg2);border-radius:5px;padding:.3rem .4rem;font-size:.62rem;font-weight:700;color:var(--violet);line-height:1.35;margin-bottom:.2rem}
-.sched-add-btn{width:100%;height:100%;border:none;background:none;color:var(--text-muted);font-size:.75rem;cursor:pointer;font-family:'Manrope',sans-serif;display:flex;align-items:center;justify-content:center;gap:.2rem}
-/* AUDIENCE */
-.aud-grid{display:grid;grid-template-columns:1fr 1fr;gap:1.25rem}
-.aud-bar-item{margin-bottom:.85rem}
-.aud-bar-label{display:flex;justify-content:space-between;font-size:.78rem;margin-bottom:.35rem}
-.aud-bar-label span:first-child{color:var(--text-mid);font-weight:600}
-.aud-bar-label span:last-child{color:var(--violet);font-weight:800}
-.aud-track{background:var(--surface2);border-radius:4px;height:8px;overflow:hidden}
-.aud-fill{height:100%;border-radius:4px;transition:width .8s ease}
-/* BTN */
-.btn-vio{background:var(--violet);color:#fff;border:none;padding:.6rem 1.2rem;border-radius:8px;font-family:'Manrope',sans-serif;font-size:.8rem;font-weight:700;cursor:pointer;transition:all .2s}
-.btn-vio:hover{background:var(--vio-l);transform:translateY(-1px)}
-@media(max-width:1100px){.metrics-row{grid-template-columns:repeat(2,1fr)}.charts-row{grid-template-columns:1fr}.aud-grid{grid-template-columns:1fr}}
-@media(max-width:700px){.sidebar{display:none}.main{margin-left:0}}
-</style>
+  <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
 <aside class="sidebar">
@@ -236,7 +144,7 @@ window.showDash = function(p) {
 
 // CHARTS
 let engChartInst, platChartInst;
-function chartOpts(){return{responsive:true,plugins:{legend:{labels:{color:'#4a3870',font:{family:'Manrope',size:11},boxWidth:10}},tooltip:{backgroundColor:'#1a0f35',titleColor:'#fff',bodyColor:'#9a88c0',borderColor:'rgba(91,33,182,.2)',borderWidth:1}},scales:{x:{grid:{color:'rgba(91,33,182,.06)'},ticks:{color:'#9a88c0',font:{family:'Manrope'}}},y:{grid:{color:'rgba(91,33,182,.06)'},ticks:{color:'#9a88c0',font:{family:'Manrope'}}}}}};}
+function chartOpts(){return{responsive:true,plugins:{legend:{labels:{color:'#4a3870',font:{family:'Manrope',size:11},boxWidth:10}},tooltip:{backgroundColor:'#1a0f35',titleColor:'#fff',bodyColor:'#9a88c0',borderColor:'rgba(91,33,182,.2)',borderWidth:1}},scales:{x:{grid:{color:'rgba(91,33,182,.06)'},ticks:{color:'#9a88c0',font:{family:'Manrope'}}},y:{grid:{color:'rgba(91,33,182,.06)'},ticks:{color:'#9a88c0',font:{family:'Manrope'}}}}}};
 const weekLabels = ['Mon','Tue','Wed','Thu','Fri','Sat','Sun'];
 const monthLabels = ['Week 1','Week 2','Week 3','Week 4'];
 const weekData = {ig:[3200,2800,4100,3600,5200,6800,4900],tw:[1800,2200,1600,2900,3400,2100,2800],li:[980,1200,1050,1400,1100,780,920]};
